# CL-ETM

./: .gitignore  README.md  hypergraphs.txt  notes.txt  pyproject.toml
cl_etm/modules/: data.py  data_loader.py  node_splitter.py  primekg.py  trainer.py
cl_etm/modules/data_model/: embedding.py  intergraph-hf.py  intergraph.py  intragraph.py  intragraphy-hf.py
cl_etm/modules/model/: hyper_rnn.py  hyper_transformers.py
cl_etm/utils/: create_sample_data.py  eda.py  misc.py
scripts/: test.py
